--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home | MeLiveAkshay</title>
+    <meta name="description" content="Software Engineer Mobile Application Flutter Developer 
+    Android Developer Computer Science & Engineering Btech Ramgovind Institute Of Technology Koderma
+    Jharkhand University Of Technology Ranchi ">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 <body>
-    <h2>MeLiveAkshay</h2>
+    
+    <h1>Hello</h1>
 </body>
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </html>
