--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,8 @@
       </section>
 
       <section id="projects" class="my-5">
-        <h2>Projects</h2>
+
+        <h2 class="text-warning">Projects</h2>
         <div class="row g-4">
           <div class="col-md-6">
             <div class="card bg-secondary text-light h-100">
