--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <div class="row g-4">
           <div class="col-md-6">
             <div class="card bg-secondary text-light h-100">
-              <img src="{{ url_for('static', filename='img/QuizParlour.png') }}" class="card-img-top" alt="Quiz Parlour Project">
+              <img src="{{ url_for('static', filename='img/q.png') }}" class="card-img-top" alt="Quiz Parlour Project">
               <div class="card-body">
                 <h3 class="card-title">Quiz Parlour</h3>
                 <p class="card-text">Native Android app for quizzes using Kotlin, Firebase, RoomDatabase and Retrofit.</p>
